--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,26 @@
 svg {
     display: block;
 }
+
+.result {
+    margin: 3px;
+    width: 200px;
+    font-size: 15px;
+    padding: 3px 5px;
+    text-align: right;
+}
+
+.number-wrapper {
+    display: inline-block;
+}
+
+.operator-wrapper {
+    display: inline-block;
+}
+
+.button {
+    width: 50px;
+    height: 50px;
+    font-size: 15px;
+    margin: 3px;
+}
