--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,44 @@
 #result {
     border: 2px solid #888;
     background-color: #eee;
+    padding: 10px;
 }
 
-svg {
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+}
+
+button {
+    margin: 3px 5px;
+    padding: 5px 10px;
+    border: 1px solid #3232ff;
+    border-radius: 4px;
+    background-color: #6464ff;
+    font-size: 1.05em;
+    color: white;
+}
+
+button:disabled {
+    border: 1px solid #4646ff;
+    background-color: #8282ff;
+    color: #aaaaaa;
+}
+
+input[type="text"] {
+    padding: 5px 7px;
+    border-radius: 4px;
+    font-size: 1.1em
+}
+
+label {
     display: block;
+    margin: 7px 0;
+}
+
+input[type="radio"], input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+.form {
+    margin-bottom: 15px;
 }
